--- a/example/package.json
+++ b/example/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "serve": "cross-env NODE_ENV=development concurrently \"postcss public/main.css -o public/css/main.css --watch\"  \"live-server ./public\"",
     "development": "cross-env NODE_ENV=development postcss public/main.css -o public/css/main.css",
-    "production": "cross-env NODE_ENV=production postcss public/main.css -o public/css/main.css",
+    "production": "cross-env NODE_ENV=production postcss public/main.css -o ../assets/sce-modal.css",
     "start": "npm run serve"
   },
   "dependencies": {
